syntax = "proto3";

package follow.v1;
option go_package="follow/v1;followv1";


message FollowRelation {
  int64 id = 1;
  int64 follower = 2;
  int64 followee = 3;
}

message FollowStatics {
  // 被多少人关注
  int64 followers =  1;
  // 自己关注了多少人
  int64 followees = 2;
}

service FollowService {
  // 增删
  rpc Follow (FollowRequest) returns (FollowResponse);
  rpc CancelFollow(CancelFollowRequest) returns (CancelFollowResponse);

  // 获得某个人的关注列表
  rpc GetFollowee (GetFolloweeRequest) returns (GetFolloweeResponse);
  // 获取某人的粉丝列表
  rpc GetFollower (GetFollowerRequest) returns (GetFollowerResponse);
  // 获得某个人是否存在关注另外一个人的信息
  rpc FollowInfo (FollowInfoRequest) returns (FollowInfoResponse);
  // 获取关注和粉丝数量
  rpc GetFollowStatics(GetFollowStaticsRequest) returns (GetFollowStaticsResponse);
}

message GetFollowStaticsRequest{
    int64 user_id = 1;
}

message GetFollowStaticsResponse{
  FollowStatics followStatics = 1;
}
message GetFolloweeRequest {
  // 关注者，也就是某人查看自己的关注列表
  int64 follower = 1;
  int64 offset = 2;
  int64 limit = 3;
}

message GetFolloweeResponse {
  repeated FollowRelation follow_relations = 1;
}

message FollowInfoRequest {
  // 关注者
  int64 follower = 1;
  // 被关注者
  int64 followee = 2;
}

message FollowInfoResponse {
  FollowRelation follow_relation = 1;
}

message FollowRequest {
  // 被关注者
  int64 followee = 1;
  // 关注者
  int64 follower = 2;
}

message FollowResponse {
}

message CancelFollowRequest {
  // 被关注者
  int64 followee = 1;
  // 关注者
  int64 follower = 2;
}

message CancelFollowResponse {
}


message GetFollowerRequest {
  int64 followee = 1;
  int64 offset = 2;
  int64 limit = 3;
}
message GetFollowerResponse {
  repeated FollowRelation follow_relations = 1;
}
